config/scm-egress-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scm-egress-proxy
  labels:
    app.kubernetes.io/name: orka
    app.kubernetes.io/component: scm-egress-proxy
spec:
  selector:
    app.kubernetes.io/name: orka
    app.kubernetes.io/component: scm-egress-proxy
  ports:
    - name: http-proxy
      port: 8080
      targetPort: http-proxy
